tools/openshift/allow-traffic-from-gateway-to-grad-business-api-policy.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-traffic-from-gateway-to-grad-business-api
spec:
  podSelector:
    matchLabels:
      app: educ-grad-business-api
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              environment: test
              name: 264e6f
  policyTypes:
    - Ingress
